<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Battlefront</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
     <string name="welcome">Welcome to BattleFront! v1.1</string>
    <string name="title_activity_game_board">GameBoard</string>
    <string name="test">This is just a test</string>
    <string name="quick_start">Quick Start</string>
    <string name="invite_friends">Invite Friends to a Game</string>
    <string name="find_friends">Find Friends</string>
    <string name="stats">Game Stats</string>
    <string name="options">Options</string>

</resources>
