<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="@string/welcome" />

    <Button
        android:id="@+id/quick_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/quick_start" />
    
    <Button
        android:id="@+id/invite_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quick_start"
        android:layout_centerHorizontal="true"
        android:text="@string/invite_friends" />
    
    <Button
        android:id="@+id/find_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/invite_friends"
        android:layout_centerHorizontal="true"
        android:text="@string/find_friends" />
    
    <Button
        android:id="@+id/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_friends"
        android:layout_centerHorizontal="true"
        android:text="@string/stats" />
    
     <Button
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stats"
        android:layout_centerHorizontal="true"
        android:text="@string/options" />

</RelativeLayout>